--- a/profile.css
+++ b/profile.css
@@ -14,7 +14,7 @@
 }
 
 body {
-  font-family: "Inter", sans-serif;
+  font-family: "SUSE Mono", monospace;
   background-color: var(--background-color);
   color: var(--primary-text-color);
 }
